0.0.4
 - feat: implement keyboard shortcuts (#15)
 - feat: automatically flush session in background every 60s (#12)
 - feat: remember data location (#20)
 - feat: ask user before claiming a file (#11)
 - fix: don't clutter the logs
0.0.3
 - feat: implement binary classification story (multiple issues)
 - feat: ask for username and remember it in settings (#14)
 - enh: print all exceptions to STDOUT
 - enh: modify title when doing binary classification
 - setup: require Python 3.8 or higher
 - setup: bump dclab to 0.39.7
0.0.2
 - add session management submodule (#5)
 - set the initial GUI layout (#4)
0.0.1
 - stub