@@ -4,6 +4,8 @@
  - feat: remember data location (#20)
  - feat: ask user before claiming a file (#11)
  - fix: don't clutter the logs
+ - fix: properly handle situations where the session file goes away
+   for external reasons (e.g. deletion)
 0.0.3
  - feat: implement binary classification story (multiple issues)
  - feat: ask for username and remember it in settings (#14)
